// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vacuum.sql > line 42 1`] = `
[
  "VACUUM (FULL, FREEZE) vactst",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "full",
                  "location": 8,
                },
              },
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "freeze",
                  "location": 14,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 22,
                    "relname": "vactst",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 45 1`] = `
[
  "CREATE TABLE vaccluster (i INT PRIMARY KEY)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "vaccluster",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 31,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 27,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 49 1`] = `
[
  "CREATE FUNCTION do_analyze() RETURNS VOID VOLATILE LANGUAGE SQL
	AS 'ANALYZE pg_am'",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "do_analyze",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "volatile",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 42,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 51,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "ANALYZE pg_am",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 65,
                },
              },
            ],
            "returnType": {
              "location": 37,
              "names": [
                {
                  "String": {
                    "sval": "void",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 62 1`] = `
[
  "INSERT INTO vactst SELECT generate_series(1, 300)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "vactst",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 26,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 42,
                              },
                            },
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 300,
                                },
                                "location": 45,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "generate_series",
                              },
                            },
                          ],
                          "location": 26,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 63 1`] = `
[
  " -- delete a few rows outside
BEGIN",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 66 1`] = `
[
  " -- delete a few rows inside
ANALYZE vactst",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 37,
                    "relname": "vactst",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 70 1`] = `
[
  "VACUUM FULL pg_am",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "full",
                  "location": 7,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 12,
                    "relname": "pg_am",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 76 1`] = `
[
  "VACUUM (DISABLE_PAGE_SKIPPING) vaccluster",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "disable_page_skipping",
                  "location": 8,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 31,
                    "relname": "vaccluster",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 79 1`] = `
[
  "CREATE TABLE pvactst (i INT, a INT[], p POINT) with (autovacuum_enabled = off)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "TypeName": {
                      "location": 74,
                      "names": [
                        {
                          "String": {
                            "sval": "off",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "autovacuum_enabled",
                  "location": 53,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "pvactst",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 29,
                  "typeName": {
                    "arrayBounds": [
                      {
                        "Integer": {},
                      },
                    ],
                    "location": 31,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "p",
                  "is_local": true,
                  "location": 38,
                  "typeName": {
                    "location": 40,
                    "names": [
                      {
                        "String": {
                          "sval": "point",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 89 1`] = `
[
  "SET min_parallel_index_scan_size to 0",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {},
                  "location": 36,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "min_parallel_index_scan_size",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 93 1`] = `
[
  "UPDATE pvactst SET i = i WHERE i < 1000",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "pvactst",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 19,
                  "name": "i",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                      ],
                      "location": 23,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                    ],
                    "location": 31,
                  },
                },
                "location": 33,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 1000,
                    },
                    "location": 35,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 97 1`] = `
[
  " -- disable parallel vacuum

VACUUM (PARALLEL -1) pvactst",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {},
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "parallel",
                  "location": 37,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 50,
                    "relname": "pvactst",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 99 1`] = `
[
  " -- error
VACUUM (PARALLEL 2, INDEX_CLEANUP FALSE) pvactst",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 2,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "parallel",
                  "location": 18,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "index_cleanup",
                  "location": 30,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 51,
                    "relname": "pvactst",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 101 1`] = `
[
  " -- error, cannot use both PARALLEL and FULL
VACUUM (PARALLEL) pvactst",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "parallel",
                  "location": 53,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 63,
                    "relname": "pvactst",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 102 1`] = `
[
  " -- error, cannot use PARALLEL option without parallel degree

-- Test different combinations of parallel and full options for temporary tables
CREATE TEMPORARY TABLE tmp (a int PRIMARY KEY)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 167,
              "relname": "tmp",
              "relpersistence": "t",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 178,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 172,
                  "typeName": {
                    "location": 174,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 107 1`] = `
[
  " -- parallel vacuum disabled for temp tables
VACUUM (PARALLEL 0, FULL TRUE) tmp",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {},
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "parallel",
                  "location": 53,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "true",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "full",
                  "location": 65,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 76,
                    "relname": "tmp",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 108 1`] = `
[
  " -- can specify parallel disabled (even though that's implied by FULL)
RESET min_parallel_index_scan_size",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "min_parallel_index_scan_size",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 113 1`] = `
[
  "CREATE TABLE no_index_cleanup (i INT PRIMARY KEY, t TEXT)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "no_index_cleanup",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 37,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "t",
                  "is_local": true,
                  "location": 50,
                  "typeName": {
                    "location": 52,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 115 1`] = `
[
  "CREATE INDEX no_index_cleanup_idx ON no_index_cleanup(t)",
  {
    "stmts": [
      {
        "stmt": {
          "IndexStmt": {
            "accessMethod": "btree",
            "idxname": "no_index_cleanup_idx",
            "indexParams": [
              {
                "IndexElem": {
                  "name": "t",
                  "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                  "ordering": "SORTBY_DEFAULT",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 37,
              "relname": "no_index_cleanup",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 120 1`] = `
[
  "VACUUM (INDEX_CLEANUP TRUE, FULL TRUE) no_index_cleanup",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "true",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "index_cleanup",
                  "location": 8,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "true",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "full",
                  "location": 28,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 39,
                    "relname": "no_index_cleanup",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 123 1`] = `
[
  "ALTER TABLE no_index_cleanup SET (vacuum_index_cleanup = false)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "arg": {
                              "String": {
                                "sval": "false",
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "vacuum_index_cleanup",
                            "location": 34,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_SetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "no_index_cleanup",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 126 1`] = `
[
  "VACUUM no_index_cleanup",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 7,
                    "relname": "no_index_cleanup",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 128 1`] = `
[
  "ALTER TABLE no_index_cleanup SET (vacuum_index_cleanup = true)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "arg": {
                              "String": {
                                "sval": "true",
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "vacuum_index_cleanup",
                            "location": 34,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_SetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "no_index_cleanup",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 133 1`] = `
[
  "INSERT INTO no_index_cleanup(i, t) VALUES (generate_series(31,60),
    repeat('1234567890',269))",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 29,
                  "name": "i",
                },
              },
              {
                "ResTarget": {
                  "location": 32,
                  "name": "t",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "no_index_cleanup",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 31,
                                  },
                                  "location": 59,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 60,
                                  },
                                  "location": 62,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "generate_series",
                                },
                              },
                            ],
                            "location": 43,
                          },
                        },
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 78,
                                  "sval": {
                                    "sval": "1234567890",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 269,
                                  },
                                  "location": 91,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "repeat",
                                },
                              },
                            ],
                            "location": 71,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 137 1`] = `
[
  "ALTER TABLE no_index_cleanup SET (vacuum_index_cleanup = off,
    toast.vacuum_index_cleanup = yes)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "arg": {
                              "TypeName": {
                                "location": 57,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "off",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "vacuum_index_cleanup",
                            "location": 34,
                          },
                        },
                        {
                          "DefElem": {
                            "arg": {
                              "TypeName": {
                                "location": 95,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "yes",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "vacuum_index_cleanup",
                            "defnamespace": "toast",
                            "location": 66,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_SetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "no_index_cleanup",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 141 1`] = `
[
  "ALTER TABLE no_index_cleanup SET (vacuum_index_cleanup = true,
    toast.vacuum_index_cleanup = false)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "List": {
                      "items": [
                        {
                          "DefElem": {
                            "arg": {
                              "String": {
                                "sval": "true",
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "vacuum_index_cleanup",
                            "location": 34,
                          },
                        },
                        {
                          "DefElem": {
                            "arg": {
                              "String": {
                                "sval": "false",
                              },
                            },
                            "defaction": "DEFELEM_UNSPEC",
                            "defname": "vacuum_index_cleanup",
                            "defnamespace": "toast",
                            "location": 67,
                          },
                        },
                      ],
                    },
                  },
                  "subtype": "AT_SetRelOptions",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "no_index_cleanup",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 145 1`] = `
[
  "VACUUM (INDEX_CLEANUP FALSE) vaccluster",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "index_cleanup",
                  "location": 8,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 29,
                    "relname": "vaccluster",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 146 1`] = `
[
  " -- index cleanup option is ignored if no indexes
VACUUM (INDEX_CLEANUP FALSE, FREEZE TRUE) vaccluster",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "index_cleanup",
                  "location": 58,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "true",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "freeze",
                  "location": 79,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 92,
                    "relname": "vaccluster",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 150 1`] = `
[
  "CREATE TEMP TABLE vac_truncate_test(i INT NOT NULL, j text)
	WITH (vacuum_truncate=true, autovacuum_enabled=false)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "true",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "vacuum_truncate",
                  "location": 67,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "autovacuum_enabled",
                  "location": 89,
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 18,
              "relname": "vac_truncate_test",
              "relpersistence": "t",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "i",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_NOTNULL",
                        "location": 42,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 36,
                  "typeName": {
                    "location": 38,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "j",
                  "is_local": true,
                  "location": 52,
                  "typeName": {
                    "location": 54,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 161 1`] = `
[
  "CREATE TABLE vacparted (a int, b char) PARTITION BY LIST (a)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 39,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 58,
                    "name": "a",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_LIST",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "vacparted",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 24,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "bpchar",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": -1,
                        },
                      },
                    ],
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 170 1`] = `
[
  "VACUUM ANALYZE vacparted(a,b,a)",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "analyze",
                  "location": 7,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 15,
                    "relname": "vacparted",
                    "relpersistence": "p",
                  },
                  "va_cols": [
                    {
                      "String": {
                        "sval": "a",
                      },
                    },
                    {
                      "String": {
                        "sval": "b",
                      },
                    },
                    {
                      "String": {
                        "sval": "a",
                      },
                    },
                  ],
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 174 1`] = `
[
  "CREATE TABLE vacparted_i (a int primary key, b varchar(100))
  PARTITION BY HASH (a)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 63,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 82,
                    "name": "a",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_HASH",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "vacparted_i",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "constraints": [
                    {
                      "Constraint": {
                        "contype": "CONSTR_PRIMARY",
                        "location": 32,
                      },
                    },
                  ],
                  "is_local": true,
                  "location": 26,
                  "typeName": {
                    "location": 28,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 45,
                  "typeName": {
                    "location": 47,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "varchar",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 100,
                          },
                          "location": 55,
                        },
                      },
                    ],
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 190 1`] = `
[
  "VACUUM vaccluster, vactst",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 7,
                    "relname": "vaccluster",
                    "relpersistence": "p",
                  },
                },
              },
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 19,
                    "relname": "vactst",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 203 1`] = `
[
  "  -- ANALYZE behaves differently inside a transaction block
ANALYZE vactst, vactst",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 68,
                    "relname": "vactst",
                    "relpersistence": "p",
                  },
                },
              },
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 76,
                    "relname": "vactst",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 208 1`] = `
[
  "ANALYZE (VERBOSE) does_not_exist",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "verbose",
                  "location": 9,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 18,
                    "relname": "does_not_exist",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 215 1`] = `
[
  "SET client_min_messages TO 'ERROR'",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 27,
                  "sval": {
                    "sval": "ERROR",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "client_min_messages",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 220 1`] = `
[
  "VACUUM (SKIP_LOCKED) vactst",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "skip_locked",
                  "location": 8,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 21,
                    "relname": "vactst",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 226 1`] = `
[
  "SET default_transaction_isolation = serializable",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 36,
                  "sval": {
                    "sval": "serializable",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "default_transaction_isolation",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 235 1`] = `
[
  "CREATE TABLE vac_option_tab (a INT, t TEXT)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "vac_option_tab",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 29,
                  "typeName": {
                    "location": 31,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "t",
                  "is_local": true,
                  "location": 36,
                  "typeName": {
                    "location": 38,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 241 1`] = `
[
  "CREATE VIEW vac_option_tab_counts AS
  SELECT CASE WHEN c.relname IS NULL
    THEN 'main' ELSE 'toast' END as rel,
  s.vacuum_count
  FROM pg_stat_all_tables s
  LEFT JOIN pg_class c ON s.relid = c.reltoastrelid
  WHERE c.relname = 'vac_option_tab' OR s.relname = 'vac_option_tab'
  ORDER BY rel",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "JoinExpr": {
                      "jointype": "JOIN_LEFT",
                      "larg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "s",
                          },
                          "inh": true,
                          "location": 139,
                          "relname": "pg_stat_all_tables",
                          "relpersistence": "p",
                        },
                      },
                      "quals": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "s",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "relid",
                                  },
                                },
                              ],
                              "location": 186,
                            },
                          },
                          "location": 194,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "c",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "reltoastrelid",
                                  },
                                },
                              ],
                              "location": 196,
                            },
                          },
                        },
                      },
                      "rarg": {
                        "RangeVar": {
                          "alias": {
                            "aliasname": "c",
                          },
                          "inh": true,
                          "location": 172,
                          "relname": "pg_class",
                          "relpersistence": "p",
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "sortClause": [
                  {
                    "SortBy": {
                      "location": -1,
                      "node": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "rel",
                              },
                            },
                          ],
                          "location": 292,
                        },
                      },
                      "sortby_dir": "SORTBY_DEFAULT",
                      "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                    },
                  },
                ],
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 46,
                      "name": "rel",
                      "val": {
                        "CaseExpr": {
                          "args": [
                            {
                              "CaseWhen": {
                                "expr": {
                                  "NullTest": {
                                    "arg": {
                                      "ColumnRef": {
                                        "fields": [
                                          {
                                            "String": {
                                              "sval": "c",
                                            },
                                          },
                                          {
                                            "String": {
                                              "sval": "relname",
                                            },
                                          },
                                        ],
                                        "location": 56,
                                      },
                                    },
                                    "location": 66,
                                    "nulltesttype": "IS_NULL",
                                  },
                                },
                                "location": 51,
                                "result": {
                                  "A_Const": {
                                    "location": 83,
                                    "sval": {
                                      "sval": "main",
                                    },
                                  },
                                },
                              },
                            },
                          ],
                          "defresult": {
                            "A_Const": {
                              "location": 95,
                              "sval": {
                                "sval": "toast",
                              },
                            },
                          },
                          "location": 46,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 117,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "s",
                              },
                            },
                            {
                              "String": {
                                "sval": "vacuum_count",
                              },
                            },
                          ],
                          "location": 117,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "BoolExpr": {
                    "args": [
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "c",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "relname",
                                  },
                                },
                              ],
                              "location": 220,
                            },
                          },
                          "location": 230,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "location": 232,
                              "sval": {
                                "sval": "vac_option_tab",
                              },
                            },
                          },
                        },
                      },
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "s",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "relname",
                                  },
                                },
                              ],
                              "location": 252,
                            },
                          },
                          "location": 262,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "location": 264,
                              "sval": {
                                "sval": "vac_option_tab",
                              },
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "OR_EXPR",
                    "location": 249,
                  },
                },
              },
            },
            "view": {
              "inh": true,
              "location": 12,
              "relname": "vac_option_tab_counts",
              "relpersistence": "p",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 253 1`] = `
[
  " -- error

-- PROCESS_MAIN option
-- Only the toast table is processed.
VACUUM (PROCESS_MAIN FALSE) vac_option_tab",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "process_main",
                  "location": 80,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 100,
                    "relname": "vac_option_tab",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 260 1`] = `
[
  "VACUUM (PROCESS_MAIN FALSE, PROCESS_TOAST FALSE) vac_option_tab",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "process_main",
                  "location": 8,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "false",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "process_toast",
                  "location": 28,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 49,
                    "relname": "vac_option_tab",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 276 1`] = `
[
  "VACUUM (BUFFER_USAGE_LIMIT '512 kB') vac_option_tab",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "512 kB",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "buffer_usage_limit",
                  "location": 8,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 37,
                    "relname": "vac_option_tab",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 279 1`] = `
[
  "VACUUM (BUFFER_USAGE_LIMIT 0) vac_option_tab",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {},
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "buffer_usage_limit",
                  "location": 8,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 30,
                    "relname": "vac_option_tab",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 282 1`] = `
[
  "VACUUM (BUFFER_USAGE_LIMIT 16777220) vac_option_tab",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 16777220,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "buffer_usage_limit",
                  "location": 8,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 37,
                    "relname": "vac_option_tab",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 284 1`] = `
[
  "VACUUM (BUFFER_USAGE_LIMIT 120) vac_option_tab",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Integer": {
                      "ival": 120,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "buffer_usage_limit",
                  "location": 8,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 32,
                    "relname": "vac_option_tab",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 286 1`] = `
[
  "VACUUM (BUFFER_USAGE_LIMIT 10000000000) vac_option_tab",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "Float": {
                      "fval": "10000000000",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "buffer_usage_limit",
                  "location": 8,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 40,
                    "relname": "vac_option_tab",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 288 1`] = `
[
  "VACUUM (BUFFER_USAGE_LIMIT '512 kB', FULL) vac_option_tab",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "512 kB",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "buffer_usage_limit",
                  "location": 8,
                },
              },
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "full",
                  "location": 37,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 43,
                    "relname": "vac_option_tab",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 291 1`] = `
[
  "VACUUM (SKIP_DATABASE_STATS) vactst",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "skip_database_stats",
                  "location": 8,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 29,
                    "relname": "vactst",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 294 1`] = `
[
  "VACUUM (ONLY_DATABASE_STATS)",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "only_database_stats",
                  "location": 8,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 295 1`] = `
[
  "  -- error

DROP VIEW vac_option_tab_counts",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "vac_option_tab_counts",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_VIEW",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 305 1`] = `
[
  "CREATE TABLE vacowned (a int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "vacowned",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 312 1`] = `
[
  "VACUUM vacowned",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 7,
                    "relname": "vacowned",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 316 1`] = `
[
  "VACUUM pg_catalog.pg_class",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 7,
                    "relname": "pg_class",
                    "relpersistence": "p",
                    "schemaname": "pg_catalog",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 320 1`] = `
[
  "VACUUM pg_catalog.pg_authid",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 7,
                    "relname": "pg_authid",
                    "relpersistence": "p",
                    "schemaname": "pg_catalog",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 326 1`] = `
[
  "VACUUM vacowned_parted",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 7,
                    "relname": "vacowned_parted",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 337 1`] = `
[
  "ALTER TABLE vacowned_parted OWNER TO regress_vacuum",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "newowner": {
                    "location": 37,
                    "rolename": "regress_vacuum",
                    "roletype": "ROLESPEC_CSTRING",
                  },
                  "subtype": "AT_ChangeOwner",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "vacowned_parted",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`vacuum.sql > line 351 1`] = `
[
  "ALTER TABLE vacowned_parted OWNER TO CURRENT_USER",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "newowner": {
                    "location": 37,
                    "roletype": "ROLESPEC_CURRENT_USER",
                  },
                  "subtype": "AT_ChangeOwner",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "vacowned_parted",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
